# dabom

./: .gitignore  Copy of Bill of Materials.xlsx  README.md  insatll.sh  install.sh  nav2_config.yaml  nav2_config_backup.yaml  pi_requirements.txt
.obsidian/: workspace.json
Arduino_Code/: README.md  platformio.ini  readme.md
Arduino_Code/src/: config.h  main.cpp  motor.cpp  motor.h  serialtest.cpp
CAD/: Base_Plate.dwg  Base_Plate.dxf  C_Karg_Brace.3mf  MotorMountA.3mf  MotorMountB.3mf  MotorMountC.3mf  MotorMountD.3mf  WheelHubAddapter2.6mmHole.3mf  WirePlate.3mf
dabom_ws/: bic.pgm  bic.yaml  global_params.yaml  requirements.txt
dabom_ws/install/: local_setup.sh  setup.sh
dabom_ws/install/dabomb_description/share/dabomb_description/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dabom_ws/install/inverse_kinematics/share/inverse_kinematics/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dabom_ws/install/inverse_kinematics/share/inverse_kinematics/cmake/: inverse_kinematicsConfig.cmake
dabom_ws/install/inverse_kinematics/share/inverse_kinematics/launch/: inverse_kinematics.launch.py
dabom_ws/install/odom/share/odom/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dabom_ws/install/odom/share/odom/cmake/: odomConfig.cmake
dabom_ws/install/serial_comm/share/serial_comm/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
dabom_ws/install/xbox_controller/share/xbox_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dabom_ws/launch/: master_launch.py  master_launch_file.launch.py
dabom_ws/log/: latest_build
dabom_ws/src/config/: SLAM.rviz
dabom_ws/src/dabom_bringup/: computer_bringup.launch.py  computer_validation.launch.py  info  nav2_params.yaml  package.xml  rpi_bringup_yaml.launch.py  rpi_launch.py  setup.py
dabom_ws/src/dabom_bringup/config/: common_params.yaml  dabom.rviz  launch_config.yaml  mapper_params_online_async.yaml  master.yaml  nav2_params.yaml  nav2_params_copy.yaml
dabom_ws/src/dabom_bringup/launch/: computer_bringup.py  nav_bringup.py  rpi_bringup.py  simulation.py
dabom_ws/src/dabom_joy/: package.xml  setup.cfg  setup.py
dabom_ws/src/dabom_joy/config/: joystick.yaml
dabom_ws/src/dabom_joy/launch/: joy_teleop_launch.py
dabom_ws/src/dabomb_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dabom_ws/src/dabomb_description/launch/: display.launch.py  gazebo.launch.py  headless.launch.py  robot_state.launch.py  robot_state_launch.py  sim_robot_state.launch.py  sim_robot_state_launch.py
dabom_ws/src/dabomb_description/meshes/: LIDAR_1.stl  Wheel1_1.stl  Wheel2_1.stl  base_link.stl
dabom_ws/src/dabomb_description/urdf/: dabomb.gazebo  dabomb.trans  dabomb.xacro
dabom_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dabom_ws/src/inv_kin/: package.xml  setup.cfg  setup.py
dabom_ws/src/inv_kin/config/: inv_kin.yaml
dabom_ws/src/inv_kin/inv_kin/: inv_kin_node.py
dabom_ws/src/inv_kin/launch/: inv_kin_launch.py
dabom_ws/src/inverse_kinematics/: CMakeLists.txt  package.xml
dabom_ws/src/inverse_kinematics/launch/: inverse_kinematics_launch.py
dabom_ws/src/inverse_kinematics/src/: inverse_kinematics_node.py
dabom_ws/src/log/: latest_build
dabom_ws/src/neo_kinematics_mecanum/: CMakeLists.txt  README.md  package.xml
dabom_ws/src/neo_kinematics_mecanum/common/include/: Kinematics.h  MecanumKinematics.h
dabom_ws/src/neo_kinematics_mecanum/launch/: test_setup.launch.py  test_setup.yaml
dabom_ws/src/neo_kinematics_mecanum2/: CMakeLists.txt  package.xml
dabom_ws/src/neo_kinematics_mecanum2/common/include/: MecanumKinematics.h
dabom_ws/src/neo_kinematics_mecanum2/common/src/: Mecanum4WKinematics.cpp
dabom_ws/src/neo_kinematics_mecanum2/launch/: test_setup.launch.py  test_setup.yaml
dabom_ws/src/neo_kinematics_mecanum2/ros/src/: neo_kinematics_mecanum_node.cpp
dabom_ws/src/odom/: CMakeLists.txt  package.xml  setup.py
dabom_ws/src/odom/config/: odom.yaml
dabom_ws/src/odom/launch/: odom_launch.py
dabom_ws/src/odom/odom/: odom_node.py
dabom_ws/src/odom/src/: odom_node.py
dabom_ws/src/odom/src/Needs_Cleaning_before_Use/odom/: package.xml  setup.cfg  setup.py
dabom_ws/src/odom/src/Needs_Cleaning_before_Use/odom/launch/: odom.launch.py
dabom_ws/src/odom/src/Needs_Cleaning_before_Use/odom/odom/: odom_node.py
dabom_ws/src/odom/src/Needs_Cleaning_before_Use/odom/odom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
dabom_ws/src/rplidar_ros/: CMakeLists.txt
dabom_ws/src/rplidar_ros/config/: rplidar_a2m8.yaml
dabom_ws/src/rplidar_ros/launch/: rplidar_a2m8_launch.py  rplidar_a2m8_launch.py:Zone.Identifier  view_rplidar_a2m8_launch.py
dabom_ws/src/serial_comm/: package.xml  setup.py
dabom_ws/src/serial_comm/launch/: oldserial.py  serial_talker_launch.py
dabom_ws/src/serial_comm/serial_comm/: serial_talker.py
dabom_ws/src/serial_comm/serial_comm/launch/: serial_talker_launch.py
dabom_ws/src/sllidar_ros2/: LidarDescription.txt  README.md
dabom_ws/src/sllidar_ros2/launch/: sllidar_a2m8_launch.py
dabom_ws/src/unique_joint_state_publisher/: CMakeLists.txt  package.xml
dabom_ws/src/unique_joint_state_publisher/launch/: unique_joint_state_publisher_launch.py
dabom_ws/src/unique_joint_state_publisher/src/: unique_joint_state_publisher_node.py
dabom_ws/src/x_serial/: package.xml  setup.cfg  setup.py
dabom_ws/src/x_serial/launch/: x_serial_launch.py
dabom_ws/src/x_serial/x_serial/: x_serial_node.py
dabom_ws/src/xbox_controller/: CMakeLists.txt  package.xml  setup.py  xbox_controller_node.py
dabom_ws/src/xbox_controller/launch/: xbox_controller_launch.py
dabom_ws/src/xbox_controller/src/: xbox_controller_node.py
install/: local_setup.sh  setup.sh
install/serial_comm/share/serial_comm/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
(+145 files in other folders)
