<package format="3">
  <name>dabom_bringup</name>
  <version>0.0.1</version>
  <description>Master launch package for dabom system</description>
  <maintainer email="christopher@karg.ca">Christopher</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>xbox_controller</exec_depend>
  <exec_depend>inv_kin</exec_depend>
  <exec_depend>odom</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>serial_comm</exec_depend>
  <exec_depend>x_serial</exec_depend>

  <!-- Optional dependencies -->
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
