<package format="3">
  <name>dabom_bringup</name>
  <version>0.0.1</version>
  <description>Master launch package for dabom system</description>
  <maintainer email="christopher@karg.ca">Christopher</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend> <!-- Change to ament_python -->

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>inv_kin</depend>
  <depend>odom</depend>
  <depend>rplidar_ros</depend>
  <depend>serial_comm</depend>
  <depend>x_serial</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>joy</depend>
  <depend>xbox_controller</depend>

  <!-- Dependencies for launch functionality -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Optional dependencies -->
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type> <!-- Change to ament_python -->
  </export>
</package>