<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dabomb_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christopher@karg.ca">c</maintainer>
  <license>Apache-2.0</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
