<?xml version="1.0"?>
<package format="3">
  <name>xbox_controller</name>
  <version>0.0.1</version>
  <description>ROS2 package for Xbox controller node that publishes cmd_vel messages.</description>
  <maintainer email="christopher@karg.ca">Christopher Karg</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
