<?xml version="1.0"?>
<package format="3">
  <!-- Package Name -->
  <name>odom</name>
  
  <!-- Version of the package -->
  <version>0.0.1</version>
  
  <!-- Brief description of the package -->
  <description>Inverse kinematics for the dabom holonomic robot project.</description>
  
  <!-- Your contact information -->
  <maintainer email="christopher@karg.ca">Christopher Karg</maintainer>
  
  <!-- License for the package -->
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend> <!-- ROS2 C++ Client Library -->

  <!-- Optional dependencies (for testing and development tools) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export the build type for ROS2 packages -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
