<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbox_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="c@todo.todo">c</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pygame</exec_depend>
  <exec_depend>inputs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
