<?xml version="1.0"?>
<package format="3">
  <name>odom</name>
  <version>0.1.0</version>
  <description>A package for calculating odometry for a Mecanum-wheeled robot</description>
  <maintainer email="christopher@karg.ca">Christopher Karg</maintainer>
  <author email="christopher@karg.ca">Christopher Karg</author>

  <license>TODO: License declaration</license>

  <!-- Build tool dependencies for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
